--- a/spaceranger_template/form.yml
+++ b/spaceranger_template/form.yml
@@ -21,135 +21,135 @@ attributes:
     options:
       - [ "Count gene expression and protein expression reads from a single capture area", "count",
           # Aggr
-          data-hide-sr_csv: true,
-          data-hide-sr_normalize: true,
+          data-hide-sr-csv: true,
+          data-hide-sr-normalize: true,
           # Hide segment-only fields
-          data-hide-sr_tissue_image: true,
+          data-hide-sr-tissue_image: true,
           # mkfastq
         ]
       - [ "Aggregate data from multiple spaceranger count runs", "aggr",
           # Count
-          data-hide-sr_image: true,
-          data-hide-sr_darkimage: true,
-          data-hide-sr_colorizedimage: true,
-          data-hide-sr_cytaimage: true,
-          data-hide-sr_dapi_index: true,
-          data-hide-sr_slide: true,
-          data-hide-sr_area: true,
-          data-hide-sr_override_id: true,
-          data-hide-sr_reorient_images: true,
-          data-hide-sr_slidefile: true,
-          data-hide-sr_image_scale: true,
-          data-hide-sr_loupe_alignment: true,
-          data-hide-sr_transcriptome: true,
-          data-hide-sr_probe_set: true,
-          data-hide-sr_filter_probes: true,
-          data-hide-sr_fastqs: true,
-          data-hide-sr_project: true,
-          data-hide-sr_sample: true,
-          data-hide-sr_lanes: true,
-          data-hide-sr_libraries: true,
-          data-hide-sr_feature_ref: true,
-          data-hide-sr_unknown_slide: true,
-          data-hide-sr_create_bam: true,
-          data-hide-sr_nosecondary: true,
-          data-hide-sr_r1_length: true,
-          data-hide-sr_r2_length: true,
-          data-hide-sr_no_libraries: true,
-          data-hide-sr_nucleus_segmentation: true,
-          data-hide-sr_custom_segmentation_file: true,
-          data-hide-sr_max_nucleus_diameter_px: true,
-          data-hide-sr_nucleus_expansion_distance_micron: true,
-          data-hide-sr_custom_bin_size: true,
-          data-hide-sr_umi_registration: true,
-          data-hide-sr_umi_to_image_offset: true,
+          data-hide-sr-image: true,
+          data-hide-sr-darkimage: true,
+          data-hide-sr-colorizedimage: true,
+          data-hide-sr-cytaimage: true,
+          data-hide-sr-dapi_index: true,
+          data-hide-sr-slide: true,
+          data-hide-sr-area: true,
+          data-hide-sr-override_id: true,
+          data-hide-sr-reorient_images: true,
+          data-hide-sr-slidefile: true,
+          data-hide-sr-image_scale: true,
+          data-hide-sr-loupe_alignment: true,
+          data-hide-sr-transcriptome: true,
+          data-hide-sr-probe_set: true,
+          data-hide-sr-filter_probes: true,
+          data-hide-sr-fastqs: true,
+          data-hide-sr-project: true,
+          data-hide-sr-sample: true,
+          data-hide-sr-lanes: true,
+          data-hide-sr-libraries: true,
+          data-hide-sr-feature_ref: true,
+          data-hide-sr-unknown_slide: true,
+          data-hide-sr-create_bam: true,
+          data-hide-sr-nosecondary: true,
+          data-hide-sr-r1_length: true,
+          data-hide-sr-r2_length: true,
+          data-hide-sr-no_libraries: true,
+          data-hide-sr-nucleus_segmentation: true,
+          data-hide-sr-custom_segmentation_file: true,
+          data-hide-sr-max_nucleus_diameter_px: true,
+          data-hide-sr-nucleus_expansion_distance_micron: true,
+          data-hide-sr-custom_bin_size: true,
+          data-hide-sr-umi_registration: true,
+          data-hide-sr-umi_to_image_offset: true,
           # Hide segment-only fields
-          data-hide-sr_tissue_image: true,
+          data-hide-sr-tissue_image: true,
           # mkfastq
           # Count and Segment common
-          data-hide-sr_output_dir: true
+          data-hide-sr-output_dir: true
         ]
       - [ "Segment nuclei from a microscope image", "segment",
           # Hide aggr-only fields
-            data-hide-sr_csv: true,
-            data-hide-sr_normalize: true,
+            data-hide-sr-csv: true,
+            data-hide-sr-normalize: true,
           # Count
-            data-hide-sr_image: true,
-            data-hide-sr_darkimage: true,
-            data-hide-sr_colorizedimage: true,
-            data-hide-sr_cytaimage: true,
-            data-hide-sr_dapi_index: true,
-            data-hide-sr_slide: true,
-            data-hide-sr_area: true,
-            data-hide-sr_override_id: true,
-            data-hide-sr_reorient_images: true,
-            data-hide-sr_slidefile: true,
-            data-hide-sr_image_scale: true,
-            data-hide-sr_loupe_alignment: true,
-            data-hide-sr_transcriptome: true,
-            data-hide-sr_probe_set: true,
-            data-hide-sr_filter_probes: true,
-            data-hide-sr_fastqs: true,
-            data-hide-sr_project: true,
-            data-hide-sr_sample: true,
-            data-hide-sr_lanes: true,
-            data-hide-sr_libraries: true,
-            data-hide-sr_feature_ref: true,
-            data-hide-sr_unknown_slide: true,
-            data-hide-sr_create_bam: true,
-            data-hide-sr_nosecondary: true,
-            data-hide-sr_r1_length: true,
-            data-hide-sr_r2_length: true,
-            data-hide-sr_no_libraries: true,
-            data-hide-sr_nucleus_segmentation: true,
-            data-hide-sr_custom_segmentation_file: true,
-            data-hide-sr_nucleus_expansion_distance_micron: true,
-            data-hide-sr_custom_bin_size: true,
-            data-hide-sr_umi_registration: true,
-            data-hide-sr_umi_to_image_offset: true
+            data-hide-sr-image: true,
+            data-hide-sr-darkimage: true,
+            data-hide-sr-colorizedimage: true,
+            data-hide-sr-cytaimage: true,
+            data-hide-sr-dapi_index: true,
+            data-hide-sr-slide: true,
+            data-hide-sr-area: true,
+            data-hide-sr-override_id: true,
+            data-hide-sr-reorient_images: true,
+            data-hide-sr-slidefile: true,
+            data-hide-sr-image_scale: true,
+            data-hide-sr-loupe_alignment: true,
+            data-hide-sr-transcriptome: true,
+            data-hide-sr-probe_set: true,
+            data-hide-sr-filter_probes: true,
+            data-hide-sr-fastqs: true,
+            data-hide-sr-project: true,
+            data-hide-sr-sample: true,
+            data-hide-sr-lanes: true,
+            data-hide-sr-libraries: true,
+            data-hide-sr-feature_ref: true,
+            data-hide-sr-unknown_slide: true,
+            data-hide-sr-create_bam: true,
+            data-hide-sr-nosecondary: true,
+            data-hide-sr-r1_length: true,
+            data-hide-sr-r2_length: true,
+            data-hide-sr-no_libraries: true,
+            data-hide-sr-nucleus_segmentation: true,
+            data-hide-sr-custom_segmentation_file: true,
+            data-hide-sr-nucleus_expansion_distance_micron: true,
+            data-hide-sr-custom_bin_size: true,
+            data-hide-sr-umi_registration: true,
+            data-hide-sr-umi_to_image_offset: true
           # mkfastq
       ]
       - [ "Run Illumina demultiplexer on sample sheets that contain 10x-specific sample index sets, and generate 10x-specific quality metrics after the demultiplex.", "mkfastq",
           # Aggr
-            data-hide-sr_csv: true,
-            data-hide-sr_normalize: true,
+            data-hide-sr-csv: true,
+            data-hide-sr-normalize: true,
           # Count
-            data-hide-sr_image: true,
-            data-hide-sr_darkimage: true,
-            data-hide-sr_colorizedimage: true,
-            data-hide-sr_cytaimage: true,
-            data-hide-sr_dapi_index: true,
-            data-hide-sr_slide: true,
-            data-hide-sr_area: true,
-            data-hide-sr_override_id: true,
-            data-hide-sr_reorient_images: true,
-            data-hide-sr_slidefile: true,
-            data-hide-sr_image_scale: true,
-            data-hide-sr_loupe_alignment: true,
-            data-hide-sr_transcriptome: true,
-            data-hide-sr_probe_set: true,
-            data-hide-sr_filter_probes: true,
-            data-hide-sr_fastqs: true,
-            data-hide-sr_project: true,
-            data-hide-sr_sample: true,
-            data-hide-sr_lanes: true,
-            data-hide-sr_libraries: true,
-            data-hide-sr_feature_ref: true,
-            data-hide-sr_unknown_slide: true,
-            data-hide-sr_create_bam: true,
-            data-hide-sr_nosecondary: true,
-            data-hide-sr_r1_length: true,
-            data-hide-sr_r2_length: true,
-            data-hide-sr_no_libraries: true,
-            data-hide-sr_nucleus_segmentation: true,
-            data-hide-sr_custom_segmentation_file: true,
-            data-hide-sr_max_nucleus_diameter_px: true,
-            data-hide-sr_nucleus_expansion_distance_micron: true,
-            data-hide-sr_custom_bin_size: true,
-            data-hide-sr_umi_registration: true,
-            data-hide-sr_umi_to_image_offset: true,
+            data-hide-sr-image: true,
+            data-hide-sr-darkimage: true,
+            data-hide-sr-colorizedimage: true,
+            data-hide-sr-cytaimage: true,
+            data-hide-sr-dapi_index: true,
+            data-hide-sr-slide: true,
+            data-hide-sr-area: true,
+            data-hide-sr-override_id: true,
+            data-hide-sr-reorient_images: true,
+            data-hide-sr-slidefile: true,
+            data-hide-sr-image_scale: true,
+            data-hide-sr-loupe_alignment: true,
+            data-hide-sr-transcriptome: true,
+            data-hide-sr-probe_set: true,
+            data-hide-sr-filter_probes: true,
+            data-hide-sr-fastqs: true,
+            data-hide-sr-project: true,
+            data-hide-sr-sample: true,
+            data-hide-sr-lanes: true,
+            data-hide-sr-libraries: true,
+            data-hide-sr-feature_ref: true,
+            data-hide-sr-unknown_slide: true,
+            data-hide-sr-create_bam: true,
+            data-hide-sr-nosecondary: true,
+            data-hide-sr-r1_length: true,
+            data-hide-sr-r2_length: true,
+            data-hide-sr-no_libraries: true,
+            data-hide-sr-nucleus_segmentation: true,
+            data-hide-sr-custom_segmentation_file: true,
+            data-hide-sr-max_nucleus_diameter_px: true,
+            data-hide-sr-nucleus_expansion_distance_micron: true,
+            data-hide-sr-custom_bin_size: true,
+            data-hide-sr-umi_registration: true,
+            data-hide-sr-umi_to_image_offset: true,
             # Hide segment-only fields
-            data-hide-sr_tissue_image: true,
+            data-hide-sr-tissue_image: true,
       ]
   sr_id:
     label: "--id"
