HTML labels don't have underscore

--- a/spaceranger_template/form.yml
+++ b/spaceranger_template/form.yml
@@ -24,7 +24,7 @@ attributes:
           data-hide-sr-csv: true,
           data-hide-sr-normalize: true,
           # Hide segment-only fields
-          data-hide-sr-tissue_image: true,
+          data-hide-sr-tissue-image: true,
           # mkfastq
         ]
       - [ "Aggregate data from multiple spaceranger count runs", "aggr",
@@ -33,41 +33,41 @@ attributes:
           data-hide-sr-darkimage: true,
           data-hide-sr-colorizedimage: true,
           data-hide-sr-cytaimage: true,
-          data-hide-sr-dapi_index: true,
+          data-hide-sr-dapi-index: true,
           data-hide-sr-slide: true,
           data-hide-sr-area: true,
-          data-hide-sr-override_id: true,
-          data-hide-sr-reorient_images: true,
+          data-hide-sr-override-id: true,
+          data-hide-sr-reorient-images: true,
           data-hide-sr-slidefile: true,
-          data-hide-sr-image_scale: true,
-          data-hide-sr-loupe_alignment: true,
+          data-hide-sr-image-scale: true,
+          data-hide-sr-loupe-alignment: true,
           data-hide-sr-transcriptome: true,
-          data-hide-sr-probe_set: true,
-          data-hide-sr-filter_probes: true,
+          data-hide-sr-probe-set: true,
+          data-hide-sr-filter-probes: true,
           data-hide-sr-fastqs: true,
           data-hide-sr-project: true,
           data-hide-sr-sample: true,
           data-hide-sr-lanes: true,
           data-hide-sr-libraries: true,
-          data-hide-sr-feature_ref: true,
-          data-hide-sr-unknown_slide: true,
-          data-hide-sr-create_bam: true,
+          data-hide-sr-feature-ref: true,
+          data-hide-sr-unknown-slide: true,
+          data-hide-sr-create-bam: true,
           data-hide-sr-nosecondary: true,
-          data-hide-sr-r1_length: true,
-          data-hide-sr-r2_length: true,
-          data-hide-sr-no_libraries: true,
-          data-hide-sr-nucleus_segmentation: true,
-          data-hide-sr-custom_segmentation_file: true,
-          data-hide-sr-max_nucleus_diameter_px: true,
-          data-hide-sr-nucleus_expansion_distance_micron: true,
-          data-hide-sr-custom_bin_size: true,
-          data-hide-sr-umi_registration: true,
-          data-hide-sr-umi_to_image_offset: true,
+          data-hide-sr-r1-length: true,
+          data-hide-sr-r2-length: true,
+          data-hide-sr-no-libraries: true,
+          data-hide-sr-nucleus-segmentation: true,
+          data-hide-sr-custom-segmentation-file: true,
+          data-hide-sr-max-nucleus-diameter-px: true,
+          data-hide-sr-nucleus-expansion-distance-micron: true,
+          data-hide-sr-custom-bin-size: true,
+          data-hide-sr-umi-registration: true,
+          data-hide-sr-umi-to-image-offset: true,
           # Hide segment-only fields
-          data-hide-sr-tissue_image: true,
+          data-hide-sr-tissue-image: true,
           # mkfastq
           # Count and Segment common
-          data-hide-sr-output_dir: true
+          data-hide-sr-output-dir: true
         ]
       - [ "Segment nuclei from a microscope image", "segment",
           # Hide aggr-only fields
@@ -78,35 +78,35 @@ attributes:
             data-hide-sr-darkimage: true,
             data-hide-sr-colorizedimage: true,
             data-hide-sr-cytaimage: true,
-            data-hide-sr-dapi_index: true,
+            data-hide-sr-dapi-index: true,
             data-hide-sr-slide: true,
             data-hide-sr-area: true,
-            data-hide-sr-override_id: true,
-            data-hide-sr-reorient_images: true,
+            data-hide-sr-override-id: true,
+            data-hide-sr-reorient-images: true,
             data-hide-sr-slidefile: true,
-            data-hide-sr-image_scale: true,
-            data-hide-sr-loupe_alignment: true,
+            data-hide-sr-image-scale: true,
+            data-hide-sr-loupe-alignment: true,
             data-hide-sr-transcriptome: true,
-            data-hide-sr-probe_set: true,
-            data-hide-sr-filter_probes: true,
+            data-hide-sr-probe-set: true,
+            data-hide-sr-filter-probes: true,
             data-hide-sr-fastqs: true,
             data-hide-sr-project: true,
             data-hide-sr-sample: true,
             data-hide-sr-lanes: true,
             data-hide-sr-libraries: true,
-            data-hide-sr-feature_ref: true,
-            data-hide-sr-unknown_slide: true,
-            data-hide-sr-create_bam: true,
+            data-hide-sr-feature-ref: true,
+            data-hide-sr-unknown-slide: true,
+            data-hide-sr-create-bam: true,
             data-hide-sr-nosecondary: true,
-            data-hide-sr-r1_length: true,
-            data-hide-sr-r2_length: true,
-            data-hide-sr-no_libraries: true,
-            data-hide-sr-nucleus_segmentation: true,
-            data-hide-sr-custom_segmentation_file: true,
-            data-hide-sr-nucleus_expansion_distance_micron: true,
-            data-hide-sr-custom_bin_size: true,
-            data-hide-sr-umi_registration: true,
-            data-hide-sr-umi_to_image_offset: true
+            data-hide-sr-r1-length: true,
+            data-hide-sr-r2-length: true,
+            data-hide-sr-no-libraries: true,
+            data-hide-sr-nucleus-segmentation: true,
+            data-hide-sr-custom-segmentation-file: true,
+            data-hide-sr-nucleus-expansion-distance-micron: true,
+            data-hide-sr-custom-bin-size: true,
+            data-hide-sr-umi-registration: true,
+            data-hide-sr-umi-to-image-offset: true
           # mkfastq
       ]
       - [ "Run Illumina demultiplexer on sample sheets that contain 10x-specific sample index sets, and generate 10x-specific quality metrics after the demultiplex.", "mkfastq",
@@ -118,38 +118,38 @@ attributes:
             data-hide-sr-darkimage: true,
             data-hide-sr-colorizedimage: true,
             data-hide-sr-cytaimage: true,
-            data-hide-sr-dapi_index: true,
+            data-hide-sr-dapi-index: true,
             data-hide-sr-slide: true,
             data-hide-sr-area: true,
-            data-hide-sr-override_id: true,
-            data-hide-sr-reorient_images: true,
+            data-hide-sr-override-id: true,
+            data-hide-sr-reorient-images: true,
             data-hide-sr-slidefile: true,
-            data-hide-sr-image_scale: true,
-            data-hide-sr-loupe_alignment: true,
+            data-hide-sr-image-scale: true,
+            data-hide-sr-loupe-alignment: true,
             data-hide-sr-transcriptome: true,
-            data-hide-sr-probe_set: true,
-            data-hide-sr-filter_probes: true,
+            data-hide-sr-probe-set: true,
+            data-hide-sr-filter-probes: true,
             data-hide-sr-fastqs: true,
             data-hide-sr-project: true,
             data-hide-sr-sample: true,
             data-hide-sr-lanes: true,
             data-hide-sr-libraries: true,
-            data-hide-sr-feature_ref: true,
-            data-hide-sr-unknown_slide: true,
-            data-hide-sr-create_bam: true,
+            data-hide-sr-feature-ref: true,
+            data-hide-sr-unknown-slide: true,
+            data-hide-sr-create-bam: true,
             data-hide-sr-nosecondary: true,
-            data-hide-sr-r1_length: true,
-            data-hide-sr-r2_length: true,
-            data-hide-sr-no_libraries: true,
-            data-hide-sr-nucleus_segmentation: true,
-            data-hide-sr-custom_segmentation_file: true,
-            data-hide-sr-max_nucleus_diameter_px: true,
-            data-hide-sr-nucleus_expansion_distance_micron: true,
-            data-hide-sr-custom_bin_size: true,
-            data-hide-sr-umi_registration: true,
-            data-hide-sr-umi_to_image_offset: true,
+            data-hide-sr-r1-length: true,
+            data-hide-sr-r2-length: true,
+            data-hide-sr-no-libraries: true,
+            data-hide-sr-nucleus-segmentation: true,
+            data-hide-sr-custom-segmentation-file: true,
+            data-hide-sr-max-nucleus-diameter-px: true,
+            data-hide-sr-nucleus-expansion-distance-micron: true,
+            data-hide-sr-custom-bin-size: true,
+            data-hide-sr-umi-registration: true,
+            data-hide-sr-umi-to-image-offset: true,
             # Hide segment-only fields
-            data-hide-sr-tissue_image: true,
+            data-hide-sr-tissue-image: true,
       ]
   sr_id:
     label: "--id"
